<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:id="@+id/Res"
        android:layout_marginTop="200dp"
        android:textSize="20sp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:id="@+id/edtweight"
        android:hint="@string/enter_your_weight_in_kg"
        android:inputType="number"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:id="@+id/edtheightft"
        android:hint="@string/enter_your_height_in_ft"
        android:inputType="number"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:id="@+id/edtheightin"
        android:hint="@string/enter_height_in_inch"
        android:inputType="number"
        />
    <Button
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/btnSubmit"
        android:backgroundTint="#0eadff"
        android:textSize="22sp"
        />

</LinearLayout>